Fix logo footer

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div class="footer__grid">
             <div class="footer__logo">
                 <a href="#!">
-                    <img src=".img/logo.svg" alt="Loft House">
+                    <img src="./img/logo.svg" alt="Loft House">
                 </a>
             </div>
             <div class="footer__nav">
